// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NumberOfResults renders with plural suffix if it is 0 1`] = `
<span>
  0
   
  results
</span>
`;

exports[`NumberOfResults renders with plural suffix if it is more than 1 1`] = `
<span>
  2
   
  results
</span>
`;

exports[`NumberOfResults renders with singular suffix if it is 1 1`] = `
<span>
  1
   
  result
</span>
`;
